# yelpcamp-django

./: .gitignore  pyproject.toml
.github/workflows/: django-cd.yml
YelpCamp/: manage.py
YelpCamp/YelpCamp/: asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
YelpCamp/YelpCamp/settings/: base.py  local.py  production.py
YelpCamp/accounts/: models.py
YelpCamp/accounts/migrations/: 0001_initial.py
YelpCamp/api/: serializers.py  urls.py  views.py
YelpCamp/api/tests/: test_apis.py
YelpCamp/campgrounds/: admin.py  forms.py  models.py  urls.py  views.py
YelpCamp/campgrounds/migrations/: 0001_initial.py  0002_campground_author.py  0002_rename_name_campground_title.py  0003_campground_image.py  0003_review_reviewer.py  0004_remove_campground_image_campground_photo1_and_more.py  0004_rename_image_campground_images.py  0005_remove_campground_images_campground_image.py  0005_remove_campground_photo1_remove_campground_photo2_and_more.py  0006_alter_campground_description_alter_campground_image_and_more.py  0006_alter_campground_image1.py  0007_campground_geometry.py  0007_review.py  0008_alter_campground_image1_alter_campground_image2_and_more.py  0008_alter_review_rating.py  0009_alter_review_rating.py  0010_alter_review_rating.py
YelpCamp/campgrounds/templates/: create.html  create_review.html  delete.html  detail.html  (+4 more)
YelpCamp/seeds/: cities.py  create_records.py  create_records_local.py  create_records_production.py  createrecords.py  download_images.py  seedhelpers.py
YelpCamp/templates/: base.html  footer.html
YelpCamp/utils/: mapbox_api.py
(+17 files in other folders)
